# Lizard_Toepads

./: .gitignore  README.md  process_tps_files.py  pyproject.toml  requirements.txt  train_yolo_6class.sbatch  yolo_detection.py
ML-morph/: all.tps  prepare-data.py  test.xml  train.sh  train.xml
ML-morph/TPS/: 0001_finger.TPS  0003_finger.TPS  0004_finger.TPS  0005_toe.TPS  0006_finger.TPS  0007_toe.TPS  0009_finger.TPS  0009_toe.TPS  0010_toe.TPS  0011_toe.TPS  0013_finger.TPS  0013_toe.TPS  0014_finger.TPS  0014_toe.TPS  0015_toe.TPS  (+1624 more)
configs/: H1.yaml  H1_obb.yaml  H1_obb_2class.yaml  H1_obb_6class.yaml  H2_bilateral.yaml  H2_bilateral_200.yaml  H2_bilateral_full.yaml  H2_bilateral_preprocessed.yaml  H4.yaml  H5.yaml  H5_obb_noflip.yaml  H6.yaml  H7_obb_6class.yaml  H8_obb_noflip.yaml  pace_pipeline.yaml  project.yaml  temp_val.yaml
data/: data.yaml
docs/: Benchmarking_Strategy.md  COMPARISON_BASELINE_VS_OBB.md  Codebase_Overview.md  EXPERIMENT_CROP_ROTATE_OBB.md  INFERENCE_WITH_FLIP.md  ML_MORPH_PACE_EXPERIMENTS.md  ML_MORPH_PIPELINE.md  RUN_EXPERIMENTS_STEP_BY_STEP.md  YOLOv11_Improvement_Plan.md  bilateral_detection_plan.md  metrics_interpretation_guide.md  pace_contribution_template.md  preprocessing_augmentation_usage.md
ml-morph/: .gitignore  README.md  README_pytorch.md  consolidated_finger.tps  consolidated_id.tps  consolidated_scale.tps  consolidated_toe.tps  images  predictions.xml  test.xml  train.xml
sbatch/: hyperparam_search_finger.sbatch  hyperparam_search_finger_baseline.sbatch  hyperparam_search_finger_obb.sbatch  hyperparam_search_finger_obb_aligned.sbatch  hyperparam_search_toe.sbatch  hyperparam_search_toe_baseline.sbatch  hyperparam_search_toe_obb.sbatch  hyperparam_search_toe_obb_aligned.sbatch  preprocess_baseline.sbatch  preprocess_obb.sbatch  preprocess_obb_aligned.sbatch  train_mlmorph_finger.sbatch  train_mlmorph_toe.sbatch  train_yolo_2class.sbatch  train_yolo_6class.sbatch  train_yolo_obb_noflip.sbatch
scripts/: download_models.py  extract_id_from_yolo.py
stacked-hourglass/: .gitignore  hourglass_preprocessing_tst.ipynb  lizarddataset.py  requirements.txt  train.py
(+1721 files in other folders)
